--- a/db.json5
+++ b/db.json5
@@ -78,7 +78,7 @@
       "id": 1,
       "name": "Elizabeth",
       "surname": "Windsor",
-      "gender": "woman",
+      "gender": "female",
       "avatar": "people1.jpg",
       "dateOfBirth": "13.07.1992",
       "account": {
@@ -90,7 +90,7 @@
       "id": 2,
       "name": "Alexandr",
       "surname": "Gavrilov",
-      "gender": "man",
+      "gender": "male",
       "avatar": "people2.jpg",
       "dateOfBirth": "22.02.1997",
       "account": {
@@ -102,12 +102,24 @@
       "id": 3,
       "name": "Petr",
       "surname": "Ermakov",
-      "gender": "man",
+      "gender": "male",
       "avatar": "people3.jpg",
       "dateOfBirth": "10.10.1995",
       "account": {
         "email": "petr_erm@yandex.com",
         "password": "nihao30002abc"
+      }
+    },
+    {
+      "id": 4,
+      "name": "Bogdan",
+      "surname": "Klauzov",
+      "gender": "male",
+      "avatar": "people4.jpg",
+      "dateOfBirth": "18.02.2017",
+      "account": {
+        "email": "bogdan_kl@yandex.com",
+        "password": "roblox234"
       }
     }
   ]
