Added filter, product page, collapsed shopping cart

--- a/db.json5
+++ b/db.json5
@@ -1,77 +1,113 @@
 {
   "products": [
     {
-      id: 1,
-      image: "racket1.jpg",
-      title: "Torneo Pulse Carbon Alu Black Tennis Racket",
-      price: 99.99,
+      "id": "1",
+      "image": "racket1.jpg",
+      "name": "Torneo Pulse Carbon Alu Black Tennis Racket",
+      "desc": "Precision control, heavy, advanced players",
+      "size": 27,
+      "weight": 260,
+      "price": 99.99
     },
     {
-      id: 2,
-      image: "racket2.jpg",
-      title: "Torneo Pulse Carbon Alu White Tennis Racket",
-      price: 129.99,
+      "id": "2",
+      "image": "racket2.jpg",
+      "name": "Torneo Pulse Carbon Alu White Tennis Racket",
+      "desc": "Powerful, lightweight, great for beginners",
+      "size": 27.5,
+      "weight": 300,
+      "price": 129.99
     },
     {
-      id: 3,
-      image: "racket3.jpg",
-      title: "Head Instinct Team Tennis Racket",
-      price: 399.99,
+      "id": "3",
+      "image": "racket3.jpg",
+      "name": "Head Instinct Team Tennis Racket",
+      "desc": "Stable, fast swings, intermediate use",
+      "size": 27,
+      "weight": 315,
+      "price": 399.99
     },
     {
-      id: 4,
-      image: "racket4.jpg",
-      title: "Head Gravity Team Tennis Racket",
-      price: 489.99,
+      "id": "4",
+      "image": "racket4.jpg",
+      "name": "Head Gravity Team Tennis Racket",
+      "desc": "Spin-friendly, forgiving, all-court play",
+      "size": 27.25,
+      "weight": 306,
+      "price": 489.99
     },
     {
-      id: 5,
-      image: "racket5.jpg",
-      title: "FILA Force TEAM Tennis Racket",
-      price: 199.99,
+      "id": "5",
+      "image": "racket5.jpg",
+      "name": "FILA Force TEAM Tennis Racket",
+      "desc": "Versatile, medium weight, balanced performance",
+      "size": 26.75,
+      "weight": 295,
+      "price": 199.99
     },
     {
-      id: 6,
-      image: "racket6.jpg",
-      title: "Head Gravity MP Tennis Racket",
-      price: 109.99,
+      "id": "6",
+      "image": "racket6.jpg",
+      "name": "Head Gravity MP Tennis Racket",
+      "desc": "Comfort, control, modern aggressive style",
+      "size": 27.75,
+      "weight": 279,
+      "price": 109.99
     },
     {
-      id: 7,
-      image: "racket7.jpg",
-      title: "Head Speed MP Tennis Racket",
-      price: 249.99,
+      "id": "7",
+      "image": "racket7.jpg",
+      "name": "Head Speed MP Tennis Racket",
+      "desc": "Spin, power, durable frame",
+      "size": 28,
+      "weight": 326,
+      "price": 249.99
     },
     {
-      id: 8,
-      image: "racket8.jpg",
-      title: "Head MX Attitude Elite Tennis Racket",
-      price: 139.99,
+      "id": "8",
+      "image": "racket8.jpg",
+      "name": "Head MX Attitude Elite Tennis Racket",
+      "desc": "Soft feel, arm-friendly, precision shots",
+      "size": 26.5,
+      "weight": 309,
+      "price": 139.99
     },
     {
-      id: 9,
-      image: "racket9.jpg",
-      title: "Head Gravity PRO Tennis Racket",
-      price: 349.99,
+      "id": "9",
+      "image": "racket9.jpg",
+      "name": "Head Gravity PRO Tennis Racket",
+      "desc": "Spin monster, lightweight, pro-level",
+      "size": 29,
+      "weight": 323,
+      "price": 349.99
     },
     {
-      id: 10,
-      image: "racket10.jpg",
-      title: "Babolat Evo Aero Tennis Racket",
-      price: 129.99,
+      "id": "10",
+      "image": "racket10.jpg",
+      "name": "Babolat Evo Aero Tennis Racket",
+      "desc": "Spin-focused, lightweight, dynamic play",
+      "size": 27.25,
+      "weight": 303,
+      "price": 129.99
     },
     {
-      id: 11,
-      image: "racket11.jpg",
-      title: "Head Gravity MP Tennis Racket",
-      price: 99.99,
+      "id": "11",
+      "image": "racket11.jpg",
+      "name": "Head Gravity MP Tennis Racket",
+      "desc": "Easy power, large sweet spot",
+      "size": 27.75,
+      "weight": 273,
+      "price": 99.99
     },
     {
-      id: 12,
-      image: "racket12.jpg",
-      title: "Head Speed MP L Tennis Racket",
-      price: 69.99,
-    },
+      "id": "12",
+      "image": "racket12.jpg",
+      "name": "Head Speed MP L Tennis Racket",
+      "desc": "Stiff, powerful, topspin potential",
+      "size": 26.75,
+      "weight": 271,
+      "price": 69.99
+    }
   ],
     "users": [
     {
